--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^5.1.0",
     "morgan": "^1.10.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.10"
+    "mysql2": "^3.14.3",
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
   }
 }
