--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "nodemon": "^3.1.10",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "uuid-parse": "^1.1.0"
   }
 }
